--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 /* Place your CSS styles in this file */
 body {background-color: powderblue;}
-h1 {font-family: "Andalé Mono", monospace;}
-h2 {font-family: "Georgia", sans-serif;}
 p {font-family: "Georgia", sans-serif;}
+a {font-family: "Georgia", sans-serif;}
