--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,5 @@
 /* Place your CSS styles in this file */
 body {background-color: powderblue;}
+h1 {font-family: "Andalé Mono", monospace;}
 p {font-family: "Georgia", sans-serif;}
 a {font-family: "Georgia", sans-serif;}
